2005-03-20  Bradley Bell  <btb@icculus.org>

	* Makefile.am: add some stuff to dist

	* main/game.c, main/game.h, main/inferno.c, main/menu.c: added
	MAX_FPS constant

	* console/CON_console.c: Fixed console cursor positioning.

	* main/text.c: revert to Error if text file not found.

2005-03-20  Martin Schaffner  <schaffnerb@gmx.ch>

	* ui/.cvsignore: New file

2005-03-17  Bradley Bell  <btb@icculus.org>

	* arch/win32/midi.c: Add RCS ID tag

	* README, VisualC/d2x/d2x.dsp, VisualC/d2xgl/d2xgl.dsp,
	VisualC/libmve/libmve.dsp, VisualC/mveplayer/mveplayer.dsp:
	Update SDL to 1.2.8

2005-03-16  Bradley Bell  <btb@icculus.org>

	* main/bm.c, main/bm.h: use hardcoded value instead of
	sizeof(tmap_info), since size depends on whether editor is built
	or not.

	* ui/mouse.c: gcc doesn't like multi-line // comments

	* main/dumpmine.c: get rid of compiler warnings

2005-03-15  Bradley Bell  <btb@icculus.org>

	* 3d/interp.c: Disabled shading of flat (non-textured) polygons.
	Fixes laser and plasma lighting bug, hopefully doesn't break
	anything else.

	* main/state.c: Fix crash if Num_walls=0

2005-03-12  Bradley Bell  <btb@icculus.org>

	* Makefile.am, configure.ac: enable editor in unix-style builds

2005-03-12  Chris Taylor  <chris@icculus.org>

	* main/gamesave.c: could check reactor model num, don't check
	reactor object shields (not used anyway, it's stored/calculated
	elsewhere)

2005-03-06  Chris Taylor  <chris@icculus.org>

	* main/piggy.c: load the descent 1 color palette when NDEBUG is
	defined

	* main/editor/seguvs.c: check the uvs after they're assigned

2005-02-27  Chris Taylor  <chris@icculus.org>

	* main/editor/med.c, ui/file.c, ui/keypress.c, ui/menu.c,
	ui/menubar.c, ui/message.c, ui/number.c, ui/popup.c: call
	gr_update in event loops

	* include/ui.h, ui/file.c, ui/listbox.c: use PhysicsFS in
	file.c, involves modifying the listbox so it can use
	an array of string pointers

2005-02-26  Chris Taylor  <chris@icculus.org>
